--- a/about.qmd
+++ b/about.qmd
@@ -4,12 +4,6 @@ format: html
 editor: visual
 ---
 
-This project was developed by **\[Team Name\]** For [INFO 511 - Fundamentals of Data Science](https://datasciaz.netlify.app/) at the University of Arizona, taught by Dr. Greg Chism. The team is comprised of the following team members.
+Kai Shuen Neo
 
--   Team member 1: One sentence description of Team member 1 (e.g., year, major, etc.).
-
--   Team member 2: One sentence description of Team member 2 (e.g., year, major, etc.).
-
--   Team member 3: One sentence description of Team member 3 (e.g., year, major, etc.).
-
--   Team member 4: One sentence description of Team member 4 (e.g., year, major, etc.).
+-   MS Data Science, University of Arizona
